# speciation

./: .gitignore  CMakeLists.txt
.github/workflows/: c-cpp.yml
src/speciation/: Age.h  Conf.h  Genus.h  GenusSeed.h  Individual.h  PopulationManagement.h  Random.h  Selection.h  Species.h  SpeciesCollection.h  exceptions.h  speciation.h
tests/: CMakeLists.txt  conf_test.cpp  evolution_test.cpp  evolution_test.h  genus_test.cpp  main_test.cpp  selection_test.cpp  species_test.cpp  test_individuals.h
